--- a/html_advanced/8-index.html
+++ b/html_advanced/8-index.html
@@ -11,6 +11,7 @@
 <body>
 	<Header><nav></nav></Header>
 		<main>
+			<h1>Homepage</h1>
 			<section>Hero section</section>
 			<section>Services section</section>
 			<section>
