--- a/html_advanced/12-index.html
+++ b/html_advanced/12-index.html
@@ -39,9 +39,7 @@
 				</article>
 			</section>
 			<section>
-				<h2>
-					About Us
-				</h2>
+				<h2>About Us</h2>
 				<p>Everything about us</p>
 				<h3>
 					Who are we
@@ -100,9 +98,7 @@
 				<article>Testimonial 3</article>
 			</section>
 			<section>
-				<h2>
-					Contact
-				</h2>
+				<h2>Contact</h2>
 				<p>We like to know new people</p>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?
